--- a/jacob-property.html
+++ b/jacob-property.html
@@ -92,7 +92,7 @@ nav.on{background:#000;border-color:var(--border);}
 
 /* MAP */
 .map-wrap{position:relative;height:360px;border:1px solid var(--border);overflow:hidden;}
-.map-wrap iframe{width:100%;height:100%;border:none;display:block;filter:grayscale(1) invert(1) contrast(.85) brightness(.78) hue-rotate(180deg);}
+.map-wrap iframe{width:100%;height:100%;border:none;display:block;}
 .map-overlay-bar{position:absolute;bottom:0;left:0;right:0;padding:12px 18px;background:rgba(8,8,8,.82);backdrop-filter:blur(10px);border-top:1px solid var(--border);display:flex;align-items:center;gap:10px;}
 .mob-pin{font-size:.9rem;}
 .mob-addr{font-size:.72rem;letter-spacing:.06em;color:rgba(255,255,255,.55);}
