--- a/jacob-listings.html
+++ b/jacob-listings.html
@@ -21,6 +21,7 @@ body{font-family:'Object Sans',sans-serif;background:var(--black);color:var(--wh
 /* NAV */
 nav{position:fixed;top:0;left:0;right:0;z-index:1000;display:flex;align-items:center;justify-content:space-between;padding:0 6%;height:78px;background:transparent;transition:background .5s var(--ease,cubic-bezier(.76,0,.24,1)),border-color .5s;border-bottom:1px solid transparent;}
 nav.on{background:#000;border-color:var(--border);}
+nav{transition:transform .45s cubic-bezier(.76,0,.24,1),opacity .45s cubic-bezier(.76,0,.24,1),background .5s,border-color .5s!important;}nav.hidden{transform:translateY(-110%);opacity:0;pointer-events:none;}
 .logo{text-decoration:none;line-height:1;}
 .logo-n{font-family:'Cormorant Garamond',serif;font-size:1.2rem;font-weight:600;letter-spacing:.14em;text-transform:uppercase;color:var(--white);display:block;}
 .logo-s{font-size:.6rem;letter-spacing:.22em;text-transform:uppercase;color:var(--sky);margin-top:3px;display:block;}
@@ -772,6 +773,7 @@ document.querySelectorAll('.sr').forEach(el=>obs.observe(el));
 })();
 </script>
 
+<script>
 // ── NAV TRANSPARENCY ────────────────────────────────────────
 (function(){
   var nav = document.getElementById('nav') || document.querySelector('nav');
@@ -789,6 +791,30 @@ document.querySelectorAll('.sr').forEach(el=>obs.observe(el));
   window.addEventListener('scroll', updateNav, {passive:true});
   updateNav();
 })();
+</script>
 
+
+<script>
+// Hide nav on scroll down (fade+slide), show on scroll up
+(function(){
+  var nav=document.getElementById('nav')||document.querySelector('nav');
+  if(!nav) return;
+  var lastY=window.scrollY, ticking=false;
+  function onScroll(){
+    var y=window.scrollY;
+    if(y>80){
+      if(y>lastY) nav.classList.add('hidden');
+      else nav.classList.remove('hidden');
+    } else {
+      nav.classList.remove('hidden');
+    }
+    lastY=y;
+    ticking=false;
+  }
+  window.addEventListener('scroll',function(){
+    if(!ticking){ticking=true;requestAnimationFrame(onScroll);}
+  },{passive:true});
+})();
+</script>
 </body>
 </html>
