--- a/jacob-property.html
+++ b/jacob-property.html
@@ -15,6 +15,7 @@ body{font-family:'Object Sans',sans-serif;background:var(--black);color:var(--wh
 .cur.big{width:52px;height:52px;background:rgba(126,200,227,.15);}.cur-ring.big{width:70px;height:70px;border-color:var(--sky);}
 nav{position:fixed;top:0;left:0;right:0;z-index:1000;display:flex;align-items:center;justify-content:space-between;padding:0 6%;height:78px;background:transparent;transition:background .5s var(--ease,cubic-bezier(.76,0,.24,1)),border-color .5s;border-bottom:1px solid transparent;}
 nav.on{background:#000;border-color:var(--border);}
+nav{transition:transform .45s cubic-bezier(.76,0,.24,1),opacity .45s cubic-bezier(.76,0,.24,1),background .5s,border-color .5s!important;}nav.hidden{transform:translateY(-110%);opacity:0;pointer-events:none;}
 .logo{text-decoration:none;line-height:1;}.logo-n{font-family:'Cormorant Garamond',serif;font-size:1.2rem;font-weight:600;letter-spacing:.14em;text-transform:uppercase;color:var(--white);display:block;}.logo-s{font-size:.6rem;letter-spacing:.22em;text-transform:uppercase;color:var(--sky);margin-top:3px;display:block;}
 .navul{display:flex;align-items:center;gap:38px;list-style:none;}.navul a{text-decoration:none;color:rgba(255,255,255,.5);font-size:.72rem;letter-spacing:.14em;text-transform:uppercase;transition:color .3s;position:relative;}.navul a::after{content:'';position:absolute;bottom:-4px;left:0;right:0;height:1px;background:var(--sky);transform:scaleX(0);transform-origin:left;transition:transform .35s var(--ease);}.navul a:hover{color:var(--white);}.navul a:hover::after{transform:scaleX(1);}
 .ncta{border:1px solid rgba(126,200,227,.35)!important;color:var(--sky)!important;padding:10px 22px;transition:all .35s!important;}.ncta::after{display:none!important;}.ncta:hover{background:var(--sky)!important;color:var(--black)!important;border-color:var(--sky)!important;}
@@ -90,7 +91,7 @@ nav.on{background:#000;border-color:var(--border);}
 .detail-label{font-size:.72rem;letter-spacing:.1em;text-transform:uppercase;color:rgba(255,255,255,.35);}
 .detail-value{font-size:.88rem;color:var(--white);font-weight:700;}
 
-/* MAP */
+/* MAP PLACEHOLDER */
 .map-wrap{position:relative;height:360px;border:1px solid var(--border);overflow:hidden;}
 .map-wrap iframe{width:100%;height:100%;border:none;display:block;}
 .map-overlay-bar{position:absolute;bottom:0;left:0;right:0;padding:12px 18px;background:rgba(8,8,8,.82);backdrop-filter:blur(10px);border-top:1px solid var(--border);display:flex;align-items:center;gap:10px;}
@@ -99,8 +100,7 @@ nav.on{background:#000;border-color:var(--border);}
 .mob-link{margin-left:auto;font-size:.62rem;letter-spacing:.14em;text-transform:uppercase;color:var(--sky);text-decoration:none;border:1px solid rgba(126,200,227,.3);padding:6px 14px;transition:all .3s;white-space:nowrap;}
 .mob-link:hover{background:var(--sky);color:var(--black);}
 .map-nearby{display:grid;grid-template-columns:1fr 1fr;gap:2px;margin-top:2px;}
-.nearby-item{padding:14px 18px;background:rgba(255,255,255,.03);border:1px solid var(--border);transition:border-color .3s,background .3s;}
-.nearby-item:hover{border-color:rgba(126,200,227,.2);background:rgba(126,200,227,.03);}
+.nearby-item{padding:14px 18px;background:rgba(255,255,255,.03);border:1px solid var(--border);}
 .nearby-name{font-size:.8rem;font-weight:700;color:var(--white);margin-bottom:2px;}
 .nearby-dist{font-size:.7rem;color:rgba(255,255,255,.35);}
 
@@ -582,15 +582,8 @@ const LISTINGS = [
   // Breadcrumb
   document.querySelector('.breadcrumb .current').textContent = p.address + ', ' + p.neighborhood;
 
-  // Tab switcher
-  window.openTab = function(btn, id) {
-    document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
-    document.querySelectorAll('.tab-panel').forEach(p => p.classList.remove('active'));
-    btn.classList.add('active');
-    document.getElementById(id).classList.add('active');
-  };
-
   // Badge
+  window.openTab=function(btn,id){document.querySelectorAll('.tab').forEach(t=>t.classList.remove('active'));document.querySelectorAll('.tab-panel').forEach(p=>p.classList.remove('active'));btn.classList.add('active');document.getElementById(id).classList.add('active');};
   function badgeClass(s){ return s==='Sold'?'sold':s==='Pending'?'pending':s==='For Rent'?'rent':s==='New'?'new':''; }
   const badge = document.querySelector('.prop-badge');
   badge.textContent = p.status + (p.listingType==='For Sale' ? ' · Exclusive Listing' : p.listingType==='For Rent' ? ' · Available Now' : '');
@@ -625,14 +618,12 @@ const LISTINGS = [
   ].map(([label,value])=>`
     <div class="detail-row"><span class="detail-label">${label}</span><span class="detail-value">${value}</span></div>`).join('');
 
-  // Location tab — Google Maps embed (no API key required)
+  // Location tab — Google Maps embed
   const fullAddr = `${p.address}, ${p.city}`;
   const encodedAddr = encodeURIComponent(fullAddr);
-  document.getElementById('mapFrame').src =
-    `https://maps.google.com/maps?q=${encodedAddr}&z=15&output=embed&hl=en`;
+  document.getElementById('mapFrame').src = `https://maps.google.com/maps?q=${encodedAddr}&z=15&output=embed&hl=en`;
   document.getElementById('mapAddr').textContent = fullAddr;
-  document.getElementById('mapDirections').href =
-    `https://www.google.com/maps/dir/?api=1&destination=${encodedAddr}`;
+  document.getElementById('mapDirections').href = `https://www.google.com/maps/dir/?api=1&destination=${encodedAddr}`;
   document.getElementById('nearbyGrid').innerHTML = p.nearby.map(n=>`
     <div class="nearby-item"><div class="nearby-name">${n.name}</div><div class="nearby-dist">${n.dist} away</div></div>`).join('');
 
@@ -655,6 +646,7 @@ const LISTINGS = [
 })();
 </script>
 
+<script>
 // ── NAV TRANSPARENCY ────────────────────────────────────────
 (function(){
   var nav = document.getElementById('nav') || document.querySelector('nav');
@@ -672,6 +664,30 @@ const LISTINGS = [
   window.addEventListener('scroll', updateNav, {passive:true});
   updateNav();
 })();
+</script>
 
+
+<script>
+// Hide nav on scroll down (fade+slide), show on scroll up
+(function(){
+  var nav=document.getElementById('nav')||document.querySelector('nav');
+  if(!nav) return;
+  var lastY=window.scrollY, ticking=false;
+  function onScroll(){
+    var y=window.scrollY;
+    if(y>80){
+      if(y>lastY) nav.classList.add('hidden');
+      else nav.classList.remove('hidden');
+    } else {
+      nav.classList.remove('hidden');
+    }
+    lastY=y;
+    ticking=false;
+  }
+  window.addEventListener('scroll',function(){
+    if(!ticking){ticking=true;requestAnimationFrame(onScroll);}
+  },{passive:true});
+})();
+</script>
 </body>
 </html>
